--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -60,6 +60,15 @@
                 </span>
             </a>
         </li>
+
+        <li>
+            <a href="{% url 'ad_empresas'%}">
+                <i class="fa fa-building fa-2x"></i>
+                <span class="nav-text">
+                   Empresa
+                </span>
+            </a>
+        </li>
     </ul>
 
     <ul class="logout">
