--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -285,16 +285,27 @@ section.services {
   background-image: linear-gradient(to top, #1a5276, #2980b9, #3498db, #5eaefc, #86c5fc, #b3dfff, #d6e9ff);
   background-repeat: no-repeat;
 }
-.contenedor{
-	display: flex;
-	max-width: 100%;
-	height: 80vh;
-	background-image: url(../img/banner.png);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: left;
-    border-bottom: 8px solid rgb(255, 255, 255);
+.contenedor {
+  width: 100%;
+  margin: auto;
 }
+
+.carousel-item img {
+  width: 100%;
+  height: 400px; /* Ajusta la altura según tus necesidades */
+  object-fit: cover;
+}
+
+
+.carousel-caption-static {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: white;
+}
+
 .contenedor .wrap{
 	max-width: 1000px;
 	margin: 0 auto;
@@ -309,6 +320,11 @@ section.services {
     text-align: left;
     align-self: center;
     margin-right: 20px;
+    background-color: rgba(61, 61, 61, 0.8);
+    padding: 15px;
+    margin-top:  40px;
+    border-radius: 50px;
+    width: 1000px;
 }
 .contenedor .wrap .box span{
 	font-size: 18px;
@@ -341,6 +357,7 @@ section.services {
 	margin-right: 20px;
 	text-align: center;
 	text-decoration: none;
+  background-color: #2f4eff;	
 	color: #ffffff;
 }
 .contenedor .wrap .box .botones .btn2{
