--- a/Core/Core/templates/index.html
+++ b/Core/Core/templates/index.html
@@ -8,7 +8,10 @@
     <link rel="icon" type="image/png" href="{% static 'resources/img/favicon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>CarCareTech-Inicio</title>
 </head>
 <body>
@@ -16,35 +19,66 @@
 {% include 'Navbar.html' %}
 {% include 'loader.html' %}
 
-	<div class="contenedor">
-		<div class="wrap">
-			<div class="box">
-				<span>Tu solucion en mecanica...</span>
-				<h1>NUESTROS MEJORES EXPERTOS</h1>
-				<p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Dolorem dolore ea aut fugit officiis nesciunt nulla, voluptate perferendis maiores!.</p>
-				<div class="botones">
-					<a href="{% url 'Productos' %}" class="btn1">Productos</a>
-					<a href="{% url 'Servicios' %}" class="btn2">Servicios</a>					
-				</div>
-			</div>
-		</div>
+<div class="contenedor">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="../static/resources/img/banner.png" alt="Primera imagen">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../static/resources/img/banner2.png" alt="Segunda imagen">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../static/resources/img/banner3.png" alt="Tercera imagen">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Siguiente</span>
+        </a>
+        <div class="carousel-caption-static">
+            <div class="wrap">
+                <div class="box">
+                    <span>Tu solucion en mecanica...</span>
+                    <h1>NUESTROS MEJORES EXPERTOS</h1>
+                    <p>Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Dolorem dolore ea aut fugit officiis nesciunt nulla, voluptate perferendis maiores!.</p>
+                    <div class="botones">
+                        <a href="{% url 'Productos' %}" class="btn1">Productos</a>
+                        <a href="{% url 'Servicios' %}" class="btn2">Servicios</a>					
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 	</div>
 
 <section class="services">
     <div class="service-card">
         <img src="{% static 'resources/img/mecanico.png' %}" alt="Service 1">
+        <br><br>
         <h3>Diagnostico</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
     <div class="service-card">
         <img src="{% static 'resources/img/mecanismo.png' %}" alt="Service 2">
+        <br><br>
         <h3>Mantenimiento</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
     <div class="service-card">
         <img src="{% static 'resources/img/mecanico2.png' %}" alt="Service 3">
+        <br><br>
         <h3>Soluciones y respuestos</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
     </div>
 </section>
   
