--- a/Core/Core/templates/SobreNosotros.html
+++ b/Core/Core/templates/SobreNosotros.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="{% static 'resources/css/styles.css' %}">
     <link rel="icon" type="image/png" href="{% static 'resources/img/favicon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <title>CarCareTech-SobreNosotros</title>
 </head>
 <body>
@@ -24,8 +27,8 @@
     </div>
 </section>
 
-<section class="about section">
-    <div class="about-content">
+<section class="story section">
+    <div class="story-content">
         <img src="{% static 'resources/img/mecanico2.png' %}" alt="About Image">
         <div class="text-content">
             <h2>Misión</h2>
