--- a/Core/Core/templates/Navbar.html
+++ b/Core/Core/templates/Navbar.html
@@ -2,14 +2,14 @@
 <nav style="border-bottom: 4px solid white;">
     <div class="navbar">
         <div class="logo">
-            <img src="{% static 'resources/img/favicon.png' %}" alt="Favicon">
+            <a href="{% url 'Inicio' %}"><img src="{% static 'resources/img/favicon.png' %}" alt="Favicon"></a>
             <a href="{% url 'Inicio' %}">CarCareTech</a>
         </div>
         <ul class="menu">
             <li><a href="{% url 'Inicio' %}">Inicio</a></li>
             <li><a href="{% url 'Servicios' %}">Servicios</a></li><!-- DINÁMICO -->
             <li><a href="{% url 'Productos' %}">Productos</a></li><!-- DINÁMICO -->
-            <li><a href="{% url 'SobreNosotros' %}">Sobre Nosotros</a></li>
+            <li><a href="{% url 'SobreNosotros' %}">Conócenos</a></li>
             {% if usuario %}
                 {% if usuario.Rol == 1 %}
                     <li><a href="{% url 'logout' %}">Logout</a></li>
