--- a/Core/Core/templates/loader.html
+++ b/Core/Core/templates/loader.html
@@ -7,4 +7,4 @@
     </div>
 </div>
 
-<script src="{% static "resources/js/app.js" %}"></script>
+<script src="{% static 'resources/js/app.js' %}"></script>
