--- a/Core/Core/templates/ADMIN/Factura/factura.html
+++ b/Core/Core/templates/ADMIN/Factura/factura.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
     <link rel="stylesheet" href="{% static 'resources/css/styles.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <!--OBTENER LA HORA-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.34/moment-timezone-with-data.min.js"></script>
     <title>CarCareTech-Admin</title>
 </head>
 <body>
@@ -37,7 +34,6 @@
                         <th>ID Factura</th>
                         <th>Fecha</th>
                         <th>Placa</th>
-                        <th>Documento</th>
                         <th>NIT</th>
                         <th>Total</th>
                         <th>Subtotal</th>
@@ -53,7 +49,6 @@
                             <td>{{ factura.id_factura }}</td>
                             <td>{{ factura.fecha }}</td>
                             <td>{{ factura.placa }}</td>
-                            <td>{{ factura.documento_M }}</td>
                             <td>{{ factura.nit }}</td>
                             <td>{{ factura.Total }}</td>
                             <td>{{ factura.Subtotal }}</td>
@@ -61,8 +56,8 @@
                             <td>{{ factura.Descuento }}</td>
                             <td>{{ factura.id_metodo_pago }}</td>
                             <td class="acciones">
-                                {% comment %} <a href="{% url 'editar_factura' factura.id_factura %}" class="btn btn-primary"><i class="fas fa-edit"></i> Editar</a>
-                                <a href="{% url 'eliminar_factura' factura.id_factura %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Eliminar</a> {% endcomment %}
+                                <a href="{% url 'editar_factura' factura.id_factura %}" class="btn btn-primary"><i class="fas fa-edit"></i> Editar</a>
+                                <a href="{% url 'eliminar_factura' factura.id_factura %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i> Eliminar</a>
                             </td>
                         </tr>
                     {% empty %}
